--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -1,3 +1,4 @@
 $landingsPageImage: url("/landingspage.jpg");
 $unionBlue: #00FFFF;
-$borderRadius: 40px
+$borderRadius: 40px;
+$buttonBorder: 2px solid;
