styling edit login page

--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -1,4 +1,5 @@
 $landingsPageImage: url("/landingspage.jpg");
 $unionBlue: #00FFFF;
-$borderRadius: 40px;
+$borderRadius: 20px;
 $buttonBorder: 2px solid;
+$inputTextfielColor: #6C6D6E;
