Feature/un 10 login styling edit (#11)
* landingspage done

* fixed theme

* edit

* forgot import

* changed images on landingspage

* styling edit figma

* styling edit login page

* added colors to theme

Co-authored-by: joel <joel_verhagen_1997@hotmail.com>

--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -1,4 +1,6 @@
 $landingsPageImage: url("/landingspage.jpg");
 $unionBlue: #00FFFF;
-$borderRadius: 40px;
+$borderRadius: 20px;
 $buttonBorder: 2px solid;
+$inputTextfielColor: #6C6D6E;
+$buttonHoverColor: #2C2C2C;
