--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -4,3 +4,9 @@ $borderRadius: 20px;
 $buttonBorder: 2px solid;
 $inputTextfielColor: #6C6D6E;
 $buttonHoverColor: #2C2C2C;
+$lightGreyColor: #C8C8C8;
+$darkGreyColor: #424242;
+$paddingSmall: 10px;
+$paddingMedium: 20px;
+$paddingLarge: 30px;
+$paddingHuge: 40px
