--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -9,5 +9,5 @@ $darkGreyColor: #424242;
 $paddingSmall: 10px;
 $paddingMedium: 20px;
 $paddingLarge: 30px;
-$paddingHuge: 40px
+$paddingHuge: 40px;
 $buttonwidth: 120px;
