--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -1,6 +1,7 @@
 $landingsPageImage: url("/landingspage.jpg");
 $unionBlue: #00FFFF;
 $borderRadius: 20px;
+$borderRadiusInput: 8px;
 $buttonBorder: 2px solid;
 $inputTextfielColor: #6C6D6E;
 $buttonHoverColor: #2C2C2C;
