Feature/un 29 union create screen (#23)
* Added components

* Update

* Styling

* End of day update

* Checkboxes

* Added union.svg and logic for checkboxes

* Formatting and margins

* Typo

* Review

* Review/ fixed login/register

* Fixed import

* Added fonts

* Implemented font

* Added banner width

* Fixed fonts

* Checkbox

* Fixed button border

* Fixed logo

--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -1,7 +1,14 @@
 $landingsPageImage: url("/landingspage.jpg");
 $unionBlue: #00FFFF;
 $borderRadius: 20px;
-$buttonBorder: 2px solid;
+$borderRadiusInput: 8px;
+$buttonBorder: 3px solid;
 $inputTextfielColor: #6C6D6E;
 $buttonHoverColor: #2C2C2C;
+$lightGreyColor: #C8C8C8;
+$darkGreyColor: #424242;
+$paddingSmall: 10px;
+$paddingMedium: 20px;
+$paddingLarge: 30px;
+$paddingHuge: 40px;
 $buttonwidth: 120px;
