--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -12,3 +12,5 @@ $paddingMedium: 20px;
 $paddingLarge: 30px;
 $paddingHuge: 40px;
 $buttonwidth: 120px;
+$unionlogo: 76px;
+$unionheaderheight: 267px;
