--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -3,8 +3,9 @@ $unionBlue: #00FFFF;
 $borderRadius: 33px;
 $borderRadiusInput: 8px;
 $buttonBorder: 3px solid;
-$inputTextfielColor: #6C6D6E;
-$buttonHoverColor: #2C2C2C;
+$inputTextFieldSelectedBorderColor: #4C4C4D;
+$inputTextFieldBorderColor: #2E2E2E;
+$cardBackgroundColor: #2C2C2C;
 $lightGreyColor: #C8C8C8;
 $darkGreyColor: #424242;
 $paddingSmall: 10px;
