--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -5,6 +5,7 @@ $borderRadiusInput: 8px;
 $buttonBorder: 3px solid;
 $inputTextfielColor: #6C6D6E;
 $buttonHoverColor: #2C2C2C;
+$errorColor: #FF00FF;
 $lightGreyColor: #C8C8C8;
 $darkGreyColor: #424242;
 $paddingSmall: 10px;
