--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -7,6 +7,8 @@ $inputTextfielColor: #6C6D6E;
 $buttonHoverColor: #2C2C2C;
 $lightGreyColor: #C8C8C8;
 $darkGreyColor: #424242;
+$darkerGreyColor: #1A1A1B;
+$blackColor: #161617;
 $paddingSmall: 10px;
 $paddingMedium: 20px;
 $paddingLarge: 30px;
