--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -1,13 +1,13 @@
 $landingsPageImage: url("/landingspage.jpg");
-$unionBlue: #00FFFF;
+$unionBlue: #00ffff;
 $borderRadius: 20px;
 $borderRadiusInput: 8px;
 $buttonBorder: 3px solid;
-$inputTextfielColor: #6C6D6E;
-$buttonHoverColor: #2C2C2C;
-$lightGreyColor: #C8C8C8;
+$inputTextfielColor: #6c6d6e;
+$buttonHoverColor: #2c2c2c;
+$lightGreyColor: #c8c8c8;
 $darkGreyColor: #424242;
-$darkerGreyColor: #1A1A1B;
+$darkerGreyColor: #1a1a1b;
 $blackColor: #161617;
 $paddingSmall: 10px;
 $paddingMedium: 20px;
