Feature/37 login link frontend w backend (#48)
* Styling fixed

* restyled create component. Posts form data to api

* .

* SignIn function is called

* Token is now set in cookie

* try to sign in

* cookies still not set on frontend

* loggin

* Login works and saves cookie. Go to landings page when log in successful

* .

* removed logs and comments

* styling

* unused font faces removed

* linting

* styling

* styling

* Error handling

* lint!

* better error handling

* more linting

* max width

* backend returns user data aigan

* Data flow in vuex, errors are handled, localization works

* cleanup

* loginFormInterface datatype for signIn request

* logs removed

* data json formatted right, bad css practices removed

* linting

--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -1,11 +1,15 @@
 $landingsPageImage: url("/landingspage.jpg");
-$unionBlue: #00ffff;
-$borderRadius: 20px;
+$unionBlue: #00FFFF;
+$borderRadius: 33px;
 $borderRadiusInput: 8px;
 $buttonBorder: 3px solid;
-$inputTextfielColor: #6c6d6e;
-$buttonHoverColor: #2c2c2c;
-$lightGreyColor: #c8c8c8;
+$inputTextFieldSelectedBorderColor: #4C4C4D;
+$inputTextFieldBorderColor: #2E2E2E;
+$cardBackgroundColor: #2C2C2C;
+$errorColor: #FF00FF;
+$buttonHoverColor: #2C2C2C;
+$inputTextfielColor: #6C6D6E;
+$lightGreyColor: #C8C8C8;
 $darkGreyColor: #424242;
 $darkerGreyColor: #1a1a1b;
 $blackColor: #161617;
