--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -1,6 +1,7 @@
 $landingsPageImage: url("/landingspage.jpg");
 $unionBlue: #00FFFF;
 $borderRadius: 33px;
+$borderRadiusSmall: 20px;
 $borderRadiusInput: 8px;
 $buttonBorder: 3px solid;
 $inputTextFieldSelectedBorderColor: #4C4C4D;
@@ -17,6 +18,7 @@ $paddingSmall: 10px;
 $paddingMedium: 20px;
 $paddingLarge: 30px;
 $paddingHuge: 40px;
+$paddingExtreme: 45px;
 $buttonwidth: 120px;
 $unionlogo: 76px;
 $unionheaderheight: 267px;
