done with votes

--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -22,7 +22,8 @@ $errorColor: #ff00ff;
 // Button stuff
 $primary-btn: $primary-light-gray;
 $primary-btn-hover: #eeeeee;
-
+$primary-btn-active: $unionBlue;
+$secondary-btn-active: $errorColor;
 
 // Input stuff
 $inputTextFieldSelectedBorderColor: #4c4c4d;
