Feature/un 79 frontend accept invite (#58)
* Created component

* Page

* Localization

* Fixed some stuff

* Merge conflict

* Fix

* Small fix

* Space

* 79 -  Component rename

* Pr feedback

Co-authored-by: Koen Lippe <koen.lippe@quicknet.nl>

--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -32,6 +32,7 @@ $inputTextfielColor: #6c6d6e;
 
 // Border stuff
 $borderRadius: 33px;
+$borderRadiusSmall: 20px;
 $borderRadiusInput: 8px;
 $buttonBorder: 3px solid;
 $borderColor: #343536;
@@ -41,3 +42,4 @@ $borderColor: #343536;
   border-radius: 0.2rem;
   overflow: hidden;
 }
+
