--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -17,6 +17,7 @@ $primary-gray: #1a1a1b;
 $secondary-gray: #424242;
 $primary-light-gray: #c8c8c8;
 $secondary-light-gray: #818384;
+$unionGreen: #00FF80;
 
 $errorColor: #ff00ff;
 
