131 - start of comment component

--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -19,6 +19,9 @@ $primary-light-gray: #c8c8c8;
 $secondary-light-gray: #818384;
 $unionGreen: #00ff80;
 
+$comment-light-gray: #343536;
+$comment-dark-gray: $primary-gray;
+
 $errorColor: #ff00ff;
 
 // Button stuff
