--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -19,9 +19,7 @@ $primary-light-gray: #c8c8c8;
 $secondary-light-gray: #818384;
 $unionGreen: #00ff80;
 
-$comment-light-gray: #343536;
-$comment-dark-gray: $primary-gray;
-
+$comment-light-gray: $secondary-gray;
 $errorColor: #ff00ff;
 
 // Button stuff
