UN-131 Ccomment component (#123)
* 131 - start of comment component

* 131 - Component loading data from prop

* 131 - Moved theme and formatting

* Formatting + remove comment

* 131 - Voting component cleanup

* 131 - handle votingcomponentn on postView

* 131 - Fixed voting on comments request

* Comments are also updated on vote

* 131 - Fix fetching vote for wrong user

* 131 - Added more context to backend, styled HR and removed logs

* 131 - Comments seed

* 131 - Created comments seed and comments creation fix

* 131 - Cleanup

* 131 - Test fix

* 131 - Post not loading fix

--- a/frontend/src/assets/theme.scss
+++ b/frontend/src/assets/theme.scss
@@ -19,6 +19,7 @@ $primary-light-gray: #c8c8c8;
 $secondary-light-gray: #818384;
 $unionGreen: #00ff80;
 
+$comment-light-gray: $secondary-gray;
 $errorColor: #ff00ff;
 
 // Button stuff
